src/styles/_editorTabs.scss
.editor-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding-right: 8px;
}

.editor-tab-container {
  display: flex;
  flex-direction: row;
  column-gap: 4px;
  padding-bottom: 4px;
}

.editor-tab {
  padding: 5px 10px;
  // !important is necessary to override the default Card background-color property.
  background-color: $cadet-color-2 !important;
  user-select: none;

  &.selected {
    // !important is necessary to override the default Card background-color property.
    background-color: $cadet-color-1 !important;
  }
}

